<resources>
    <string name="app_name">BasicArchitecture</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="birthday">Date of birth</string>
    <string name="next_step">Next step</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="interests">Interests</string>
</resources>
